@@ -335,35 +335,35 @@ void user_interface::draw_view(class system& sys, class game& gm, const vector3&
 	   The "easiest" thing would be to know where sun and moon were at 1st. january 1939, 00:00am.
 	*/
 	// fixme: adjust OpenGL light position to infinite in sun/moon direction.
-	// fixme: exact values?
-	const double EARTH_ROT_AXIS_ANGLE = 23.0;	// exact degrees?
-	const double MOON_ORBIT_TIME = 28.0*86400.0;	// not 28 days exactly
+	const double EARTH_RADIUS = 6378e3;
+	const double SUN_RADIUS = 696e6;
+	const double MOON_RADIUS = 1738e3;
+	const double EARTH_SUN_DISTANCE = 1496e8;
+	const double MOON_EARTH_DISTANCE = 3844e5;
+	const double EARTH_ROT_AXIS_ANGLE = 23.45;
+	const double MOON_ORBIT_TIME = 29.5306 * 86400.0;
 	const double EARTH_ROTATION_TIME = 86400.0;
-	const double EARTH_CIRCUMFERENCE = 40030173.59;
-	const double MOON_EARTH_DISTANCE = 384000000.0;	// more accurate?
-	const double EARTH_RADIUS = 6371000;		// more ...
-	const double EARTH_SUN_DISTANCE = 150e9;	// more ...
-	const double EARTH_ORBIT_TIME = 365.25*86400.0;	// more ... 365.25xxx
-	const double SUN_RADIUS = 5e9;			// exact value?!
-	const double MOON_RADIUS = 2e6;			// exact value?!
+	const double EARTH_CIRCUMFERENCE = 2.0 * M_PI * EARTH_RADIUS;
+	const double EARTH_ORBIT_TIME = 31556926.5;
+	// these values are difficult to get. SUN_POS_ADJUST should be around +9.8deg (10days of 365 later) but that gives
+	// a roughly right position but wrong sun rise time by about 40min. fixme
+	const double SUN_POS_ADJUST = 0;	// in degrees. 10 days from 21st. Dec. to 1st. Jan. * 360deg/365.24days
+	const double MOON_POS_ADJUST = 300.0;	// in degrees. Moon pos in its orbit on 1.1.1939 fixme: this value is a rude guess
 	double universaltime = gm.get_time();//    * 8640;	// fixme: substract local time
-
-	// temporary matrix used for relative sun position computation
-	GLdouble sunmat[16];
 
 	// draw sun
 	glPushMatrix();
 	// Transform earth space to viewer space
 	// to avoid mixing very differently sized floating point values, we scale distances before translation.
-	double sun_scale_fac = 0.96 * max_view_dist / EARTH_SUN_DISTANCE;
+	double sun_scale_fac = max_view_dist / EARTH_SUN_DISTANCE;
 	glTranslated(0, 0, -EARTH_RADIUS * sun_scale_fac);
 	glRotated(360.0 * -viewpos.y * 4 / EARTH_CIRCUMFERENCE, 0, 1, 0);
 	glRotated(360.0 * -viewpos.x * 2 / EARTH_CIRCUMFERENCE, 1, 0, 0);
 	// Transform sun space to earth space
 	glRotated(360.0 * -myfmod(universaltime, EARTH_ROTATION_TIME)/EARTH_ROTATION_TIME, 0, 1, 0);
 	glRotated(-EARTH_ROT_AXIS_ANGLE, 1, 0, 0);
-	glRotated(360.0 * myfmod(universaltime, EARTH_ORBIT_TIME)/EARTH_ORBIT_TIME, 0, 1, 0);
-	glTranslated(0, 0, -EARTH_SUN_DISTANCE * sun_scale_fac);
+	glRotated(SUN_POS_ADJUST + 360.0 * myfmod(universaltime, EARTH_ORBIT_TIME)/EARTH_ORBIT_TIME, 0, 1, 0);
+	glTranslated(0, 0, -EARTH_SUN_DISTANCE * sun_scale_fac * 0.96);	// to keep it inside sky hemisphere
 	// draw quad
 	double suns = SUN_RADIUS * sun_scale_fac;
 	glColor3f(1,1,1);
@@ -379,35 +379,27 @@ void user_interface::draw_view(class system& sys, class game& gm, const vector3&
 	glTexCoord2f(0,1);
 	glVertex3f(-suns, suns, 0);
 	glEnd();
-	// compute relative sun position
-/*
-	glGetDoublev(GL_MODELVIEW_MATRIX, &sunmat[0]);
-	GLdouble sunx = sunmat[12], suny = sunmat[13], sunz = sunmat[14];
-GLfloat lposition[4] = {sunx,suny,sunz,0};	//fixed for now. fixme
-glLightfv(GL_LIGHT1, GL_POSITION, lposition);
-printf("sunp %f %f %f\n",sunx,suny,sunz);	
-*/
-/*
-	glGetDoublev(GL_MODELVIEW_MATRIX, &sunmat[0]);
-	sunx -= sunmat[12];
-	suny -= sunmat[13];
-	sunz -= sunmat[14];
-printf("sunp %f %f %f\n",sunx,suny,sunz);
-*/
+
+	// this is not correct because of the shortened translation above.
+	// instead take the transform matrix multiply with an vector (0,0,1,1) instead of last translation
+	// to get direction of sun (4th. component is 0) fixme
+	GLfloat lp[4]={0,0,0,1};		// light comes from sun (maybe use directional light)
+	glLightfv(GL_LIGHT1, GL_POSITION, lp);
+
 	glPopMatrix();
 
 	// draw moon
 	glPushMatrix();
 	// Transform earth space to viewer space
-	double moon_scale_fac = 0.95*max_view_dist / MOON_EARTH_DISTANCE;
+	double moon_scale_fac = max_view_dist / MOON_EARTH_DISTANCE;
 	glTranslated(0, 0, -EARTH_RADIUS * moon_scale_fac);
 	glRotated(360.0 * -viewpos.y * 4 / EARTH_CIRCUMFERENCE, 0, 1, 0);
 	glRotated(360.0 * -viewpos.x * 2 / EARTH_CIRCUMFERENCE, 1, 0, 0);
 	// Transform moon space to earth space
 	glRotated(360.0 * -myfmod(universaltime, EARTH_ROTATION_TIME)/EARTH_ROTATION_TIME, 0, 1, 0);
 	glRotated(-EARTH_ROT_AXIS_ANGLE, 1, 0, 0);
-	glRotated(360.0 * myfmod(universaltime, MOON_ORBIT_TIME)/MOON_ORBIT_TIME, 0, 1, 0);
-	glTranslated(0, 0, MOON_EARTH_DISTANCE * moon_scale_fac);
+	glRotated(MOON_POS_ADJUST + 360.0 * myfmod(universaltime, MOON_ORBIT_TIME)/MOON_ORBIT_TIME, 0, 1, 0);
+	glTranslated(0, 0, MOON_EARTH_DISTANCE * moon_scale_fac * 0.95);	// to keep it inside sky hemisphere
 	// draw quad	
 	double moons = MOON_RADIUS * moon_scale_fac;
 	glColor3f(1,1,1);
